--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Citrus is still WIP (Work In Progress)</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <script type="text/javascript">
+        // Redirect to the new URL
+        window.location.href = "https://en.wikipedia.org/wiki/Citrus";
+    </script>
+</head>
+<body>
+    <p>If you are not redirected automatically, follow this <a href="https://en.wikipedia.org/wiki/Citrus">link</a>.</p>
+</body>
+</html>
